Callhome fix... However, audio files seems to be broken (only contain noise)

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
   functional: functional extraction
   transforms: transforms extraction
   dataset: datasets
+  callhome: dataset callhome
