--- a/config/dset_dialog_audio.yaml
+++ b/config/dset_dialog_audio.yaml
@@ -8,9 +8,9 @@ dataset:
   # Sliding Dataset
   audio_overlap: 2
   # IPU Dataset
-  audio_context_duration: 8
-  ipu_min_time: 1
-  ipu_pause_time: 0.2
+  audio_context_duration: 5 # minimum context before ipu-end to count
+  ipu_min_time: 1 # ipus must be longer than this to count
+  ipu_pause_time: 0.2 # pause length must be longer than this to count
   # VAD
   vad_hz: 100
   vad_bin_times: [.2, .4, .6, .8]
