--- a/pytest.ini
+++ b/pytest.ini
@@ -4,5 +4,6 @@ markers =
   functional: functional extraction
   transforms: transforms extraction
   dataset: datasets
+  switchboard:
   callhome: dataset callhome
   dialog_audio_dm
