update tests (omit testing fisher if data is not found (hardcoded path))

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,12 @@
 [pytest]
-markers = 
+markers =
   features: feature extraction
   functional: functional extraction
   transforms: transforms extraction
   dataset: datasets
+  dm: dialogmanager
   switchboard:
+  fisher:
+  vacation:
   callhome: dataset callhome
   dialog_audio_dm
